--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     </dependency>
   </dependencies>
 
+  <modules>
+    <module>content</module>
+  </modules>
+
   <build>
     <plugins>
       <plugin>
