--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <groupId>com.github.bmvisioli</groupId>
   <artifactId>java-gt8-workshop</artifactId>
   <version>1.0</version>
+  <packaging>poms</packaging>
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
